--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "firebase": "^10.8.1",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
