--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "duckrace",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://palberico.github.io/duckrace",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@react-google-maps/api": "^2.19.3",
@@ -14,6 +15,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
