--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.8.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.4.0",
     "react-leaflet": "^4.2.1",
